syntax = "proto3";

package v2.entity.post;
import "google/protobuf/timestamp.proto";

option go_package = "github.com/dtc03012/me/protobuf/proto/entity/post";

message comment {
  int32 id = 1;
  int32 post_id = 2;
  string writer = 3;
  string password = 4;
  string comment = 5;
  int32 like_cnt = 6;
  google.protobuf.Timestamp create_at = 7;
}